syntax = "proto3";
package activitycomm;

option optimize_for = LITE_RUNTIME;
option go_package = "github.com/FrancescoIlario/usplay/pkg/services/activitycomm";

import "google/protobuf/timestamp.proto";
import "activitytypecomm/activitytype.proto";
import "ordercomm/order.proto";

// The Activity service definition.
service ActivitySvc {
    // Creates a new activity
    rpc Create (CreateActivityRequest) returns (CreateActivityReply) {}
    // Reads an activity
    rpc Read (ReadActivityRequest) returns (ReadActivityReply) {}
    // Delete an activity
    rpc Delete (DeleteActivityRequest) returns (DeleteActivityReply) {}
    // Update an activity
    rpc Update (UpdateActivityRequest) returns (UpdateActivityReply) {}
    // List an activity
    rpc List (ListActivitiesRequest) returns (ListActivitiesReply) {}
}

// The request message containing the activity details
message CreateActivityRequest {
    string Name = 1;
    string Code = 2;
    string Description = 3;
    string ActTypeID = 4;
    string OrderID = 5;
}

// The response message containing the id of the activity
message CreateActivityReply {
    string Id = 1;
}

// The request message for the read request
message ReadActivityRequest {
    string Id = 1;
}

// The response message to the read request
message ReadActivityReply {
    Activity activity = 1;
}

// The request message for the delete request
message DeleteActivityRequest {
    string Id = 1;
}

// The response message to the delete request
message DeleteActivityReply { }

// The request message for the update request
message UpdateActivityRequest {
    string Id = 1;
    string Name = 2;
    string Code = 3;
    string Description = 4;
    string ActTypeID = 5;
    string OrderID = 6;
}

// The response message to the update request.
// Returns the old values for the Activity
message UpdateActivityReply {}

// The request message for the list activities request
message ListActivitiesRequest { 
    repeated string FilterIds = 1;
}

// The response message to the list activities request.
message ListActivitiesReply {
    repeated Activity activities = 1;
}

message Activity {
    string Id = 1;
    string Name = 2;
    string Code = 3;
    string Description = 4;
    activitytypecomm.ActivityType ActType = 5;
    google.protobuf.Timestamp CreationTime = 6;
    ordercomm.Order Order = 7;
}